# AtCoder-AC-Notifier

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: all_problems.json
data/amesyu/: amesyu_ac.json  amesyu_info.json
data/noshinn/: noshinn_ac.json  noshinn_info.json
data/users/amesyu/: ac.json
data/users/noshinn/: info.json
data/users/sorachandu/: ac.json  info.json
src/: discordbot.py
src/discord_bot/: discordbot.py
src/discord_bot/cogs/: rating.py  register.py  select_problem.py
src/get_info/: atcoder_problems.py  get_all_problems_data.py  get_atcoder_rating.py  select_problem.py
