[tool.poetry]
name = "atcoder-ac-notifier"
version = "0.1.0"
description = ""
authors = ["sorachandu","noshinn"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
discord = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
